--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  sqflite_common_ffi: ^2.3.4+4
+  path: ^1.9.0
+  sqlite3_flutter_libs: ^0.5.41
 
 dev_dependencies:
   flutter_test:
