feat: Implement initial browser extensions for Chrome, Edge, and Firefox to sync tabs via native messaging.

--- a/extension/edge/manifest.json
+++ b/extension/edge/manifest.json
@@ -6,7 +6,9 @@
     "permissions": [
         "tabs",
         "tabGroups",
-        "nativeMessaging"
+        "nativeMessaging",
+        "identity",
+        "storage"
     ],
     "background": {
         "service_worker": "background.js"
