--- a/extension/chrome/manifest.json
+++ b/extension/chrome/manifest.json
@@ -14,7 +14,8 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_title": "LinkMate"
+    "default_title": "LinkMate",
+    "default_popup": "popup.html"
   },
   "icons": {
     "16": "icons/icon16.png",
