--- a/extension/firefox/manifest.json
+++ b/extension/firefox/manifest.json
@@ -13,6 +13,10 @@
             "background.js"
         ]
     },
+    "browser_action": {
+        "default_title": "LinkMate",
+        "default_popup": "popup.html"
+    },
     "browser_specific_settings": {
         "gecko": {
             "id": "linkmate@linkmate.com",
