--- a/extension/edge/manifest.json
+++ b/extension/edge/manifest.json
@@ -1,8 +1,9 @@
 {
     "manifest_version": 3,
     "name": "LinkMate Core (Edge)",
-    "version": "1.0",
-    "description": "Syncs browser tabs with LinkMate desktop app via Native Messaging.",
+    "short_name": "LinkMate",
+    "version": "1.0.0",
+    "description": "Cross-browser tab manager. Syncs your Edge tabs with LinkMate desktop app in real-time.",
     "permissions": [
         "tabs",
         "tabGroups",
