--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite_common_ffi: ^2.3.4+4
   path: ^1.9.0
   sqlite3_flutter_libs: ^0.5.41
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
