--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -63,9 +63,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/chrome_888896.png
+    - assets/edge_888899.png
+    - assets/firefox_888902.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
