--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path: ^1.9.0
   sqlite3_flutter_libs: ^0.5.41
   http: ^1.6.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
